--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/mcpackms/ruantools2#readme",
   "devDependencies": {
-    "tailwindcss": "^4.2.0"
+    "@astrojs/tailwind": "^6.0.2",
+    "tailwindcss": "^3.4.19"
   }
 }
