--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "astro": "^5.17.3",
     "blake2b-wasm": "^2.4.0",
     "crypto-js": "^4.2.0",
+    "hash-wasm": "^4.12.0",
     "js-sha3": "^0.9.3"
   },
   "description": "```sh npm create astro@latest -- --template basics ```",
