--- a/package.json
+++ b/package.json
@@ -10,23 +10,24 @@
     "deploy": "npx gh-pages -d dist"
   },
   "dependencies": {
-    "astro": "^5.17.3",
-    "crypto-js": "^4.2.0",
-    "js-sha3": "^0.9.3"
+    "astro": "^5.17.3"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^6.0.2",
-    "tailwindcss": "^3.4.19",
-    "vite-plugin-wasm": "^3.3.0",
-    "vite-plugin-top-level-await": "^1.4.1"
+    "tailwindcss": "^3.4.19"
   },
-  "description": "```sh npm create astro@latest -- --template basics ```",
+  "description": "Astro-based tools website for GitHub Pages",
   "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mcpackms/ruantools2.git"
   },
-  "keywords": [],
+  "keywords": [
+    "tools",
+    "hash",
+    "timestamp",
+    "astro"
+  ],
   "author": "",
   "license": "ISC",
   "bugs": {
