--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "deploy": "npx gh-pages -d dist"
   },
   "dependencies": {
-    "astro": "^5.17.3"
+    "@astrojs/vue": "^5.1.4",
+    "astro": "^5.17.3",
+    "vue": "^3.5.28"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^6.0.2",
