--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
+    "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
@@ -26,8 +27,10 @@
   },
   "keywords": [
     "tools",
-    "hash",
-    "timestamp",
+    "code-formatter",
+    "json",
+    "python",
+    "java",
     "astro"
   ],
   "author": "",
