--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "deploy": "npx gh-pages -d dist"
   },
   "dependencies": {
+    "@astrojs/react": "^4.4.2",
     "@astrojs/vue": "^5.1.4",
+    "@types/react": "^19.2.14",
+    "@types/react-dom": "^19.2.3",
     "astro": "^5.17.3",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "vue": "^3.5.28"
   },
   "devDependencies": {
