--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
     "astro": "^5.17.3",
+    "crypto-js": "^4.2.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "vue": "^3.5.28"
