--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -16,17 +16,15 @@ concurrency:
 
 env:
   NODE_VERSION: "20"
-  PNPM_VERSION: "8"
+  PNPM_VERSION: "10" # 关键修复：将版本从 8 更新为 10，与本地环境保持一致
 
 jobs:
   build:
-    name: Build with pnpm
+    name: Build
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v2
@@ -40,20 +38,6 @@ jobs:
           cache: 'pnpm'
           cache-dependency-path: 'pnpm-lock.yaml'
 
-      - name: Debug file list
-        run: |
-          echo "Current directory:"
-          pwd
-          echo "Files in repository:"
-          ls -la
-          echo "Checking pnpm-lock.yaml:"
-          if [ -f "pnpm-lock.yaml" ]; then
-            echo "✅ pnpm-lock.yaml exists"
-            echo "File size: $(ls -lh pnpm-lock.yaml | awk '{print $5}')"
-          else
-            echo "❌ pnpm-lock.yaml NOT found"
-          fi
-
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
@@ -65,7 +49,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: dist/
+          path: ./dist
 
   deploy:
     environment:
